--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <h1>Miikka Niemelä's Portfolio</h1>
     <h2>I'm a Web Developer</h2>
     <hr>
-    <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
-    <img src="../4.3 HTML Porfolio Project/assets/images/movie-ranking.png" alt="movieproject" height="200">
+    <a href="./4.3 HTML Porfolio Project/public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
+    <img src="./4.3 HTML Porfolio Project/assets/images/movie-ranking.png" alt="movieproject" height="200">
 
-    <a href="../4.3 HTML Porfolio Project/public/birthdayinvite.html"><h3>Birthday Invite Project</h3></a>
-    <img src="../4.3 HTML Porfolio Project/assets/images/birthday-invite.png" alt="birthdayinvite" height="200">
+    <a href="./4.3 HTML Porfolio Project/public/birthdayinvite.html"><h3>Birthday Invite Project</h3></a>
+    <img src="./4.3 HTML Porfolio Project/assets/images/birthday-invite.png" alt="birthdayinvite" height="200">
     <hr>
     <a href="./4.3 HTML Porfolio Project/public/about.html">About Me</a>
     <a href="./4.3 HTML Porfolio Project/public/contact.html">Contact Me</a>
